[gd_scene load_steps=8 format=3 uid="uid://cncpiks07u0w7"]

[ext_resource type="Script" path="res://script/INSTRUCOES.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://bp8ma4dqka1s1" path="res://tudo/Botoes/botao.png" id="3"]
[ext_resource type="Texture2D" uid="uid://cw4bqmy8mkmgt" path="res://tudo/Botoes/botaoAoClicar.png" id="4"]
[ext_resource type="Texture2D" uid="uid://dyac54buuv0pk" path="res://tudo/Botoes/BotaoClique.png" id="5"]
[ext_resource type="Texture2D" uid="uid://btceo6bw1ii0v" path="res://tudo/imagens/menu/comeca.jpg" id="6"]
[ext_resource type="FontFile" uid="uid://chye5x60sbhrh" path="res://tudo/fonts/BRITANIC.TTF" id="6_bxvux"]
[ext_resource type="AudioStream" uid="uid://djsw08q0rdvuo" path="res://tudo/sons/MusicaMenuPrincipal.mp3" id="7_3kidp"]

[node name="INSTRUCOES" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_left = -7.0
offset_right = -7.0
script = ExtResource("1")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(189, 329)
scale = Vector2(0.5, 0.52)
texture = ExtResource("6")

[node name="RichTextLabel" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 69.0
offset_top = 165.0
offset_right = 307.0
offset_bottom = 387.0
theme_override_font_sizes/normal_font_size = 14

[node name="botao1" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 105.0
offset_top = 411.0
offset_right = 328.0
offset_bottom = 489.0
scale = Vector2(0.6, 0.6)
texture_normal = ExtResource("3")
texture_pressed = ExtResource("4")
texture_hover = ExtResource("5")

[node name="Label" type="Label" parent="botao1"]
layout_mode = 0
offset_left = 5.0
offset_top = 10.0
offset_right = 217.0
offset_bottom = 57.0
theme_override_fonts/font = ExtResource("6_bxvux")
theme_override_font_sizes/font_size = 30
horizontal_alignment = 1
vertical_alignment = 1

[node name="botao2" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 105.0
offset_top = 85.0
offset_right = 280.0
offset_bottom = 135.0
scale = Vector2(0.6, 0.6)
texture_normal = ExtResource("3")

[node name="Label" type="Label" parent="botao2"]
layout_mode = 0
offset_left = 5.0
offset_top = 10.0
offset_right = 217.0
offset_bottom = 57.0
theme_override_fonts/font = ExtResource("6_bxvux")
theme_override_font_sizes/font_size = 30
horizontal_alignment = 1
vertical_alignment = 1

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_3kidp")

[connection signal="pressed" from="botao1" to="." method="_on_botao1_pressed"]
